--- a/main.css
+++ b/main.css
@@ -1,70 +1,82 @@
-body {
- font-family: 'Courier New', Courier, monospace;
+* { /* RESET */
+  vertical-align: baseline;
+  font-weight: bold;
+  font-family: Verdana, Helvetica, sans-serif;
+  font-style: inherit;
+  font-size: 100%;
+  border: 0 none;
+  outline: 0;
+  padding: 0;
+  margin: 0;
+  color: black;
 }
 
-#headerContainer {
+/* HEADER */
+
+#header-container {
   display: block;
   padding: 20px;
-  border-bottom: black solid 3px;
+  background-color: orangered;
+  border-bottom: #fff solid 3px;
+  
+}
+
+#header-nav {
+margin: 10px auto;
+font-size: 20px;
+padding-bottom: 20px
+
 }
 
 #title {
-  display: inline-block;
-  font-size: 100%;
-  font-weight: normal;
-  float: left;
-  
+float: left;
 
 }
 
+h3 {
+float: right;
 
-#nav {
-    background-color: orange;
-    padding: 10px;
-    width: 100%;
-    text-align: center;
-    position: fixed;
-
-
-
-  }
-  
-  #nav a {
-    text-decoration: none;
-    color: black;
-    padding: 10px;
-    float: right;
-    margin-left: 20px
-  }
-  
-#boxContainer {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  margin: 50px;
 }
 
-.box {
+.nav {
+padding-left: 10px
+
+}
+
+body {
+  background-color: white;
+  height: 100px;
+
+}
+
+#plans-container {
+clear: both;
+text-align: center;
+
+
+}
+
+.plan {
   display: inline-block;
   padding: 17px;
-  border: black solid 3px;
+  border: orangered solid 3px;
   margin: 20px;
-  width: 300px;
+  width: 200px;
   text-align: left;
   vertical-align: top;
 }
 
-.title {
+.plan-title {
   font-size: 150%;
   margin-bottom: 10px;
 }
 
-.content {
+.plan-content {
   margin-bottom: 10px;
   font-weight: normal;
 }
 
-.button {
+.plan-button {
   width: 100%;
   height: 40px;
   text-align: center;
@@ -72,10 +84,11 @@ body {
 }
 
 .plan-button:hover {
-  background-color: orangered;
-  border: #fff solid 3px;
+  background-color: white;
+  border: black solid 3px;
 }
+
 .plan-button:active {
-  background-color: orangered;
-  border: #fff solid 3px;
+  background-color: white;
+  border: black solid 3px;
 }
